--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
-.logo{
+ /* .page{
+    
+}  */
+
+.logo-top{
     position: absolute;
     width: 145px;
     height: 31px;
@@ -15,11 +19,13 @@
     background-color: aqua;
 } */
 
+/* ......................................................... */
+
 .menu-navigation > ul{
     list-style-type: none;
 }
 
-.menu-item-agencja{
+.menu-navigation-item-agency{
     position: absolute;
     width: 53px;
     height: 16px;
@@ -27,7 +33,7 @@
     left: 453px;
 }
 
-.menu-item-portfolio > a{
+.menu-navigation-item-portfolio > a{
     position: absolute;
     width: 58px;
     height: 16px;
@@ -35,7 +41,7 @@
     left: 552px;
 }
 
-.menu-item-contact{
+.menu-navigation-item-contact{
     position: absolute;
     width: 59px;
     height: 16px;
@@ -43,11 +49,196 @@
     left: 656px;
 }
 
-
-/* .menu-agencja{
+.e-mail-top{
     position: absolute;
-    width: 53px;
+    width: 135px;
     height: 16px;
-    left: 453px;
     top: 32px;
+    left: 1078px;
+
+    list-style-type: none;
+
+    font-family: 'Roboto';
+    font-style: normal;
+}
+
+.telephone-top{
+    position: absolute;
+    width: 110px;
+    height: 16px;
+    top: 32px;
+    left: 1263px;
+
+    list-style-type: none;
+}
+
+/* ..................................................... */
+
+.menu {
+    list-style-type: none;
+}
+
+.menu-item-all{
+    position: absolute;
+    width: 121px;
+    height: 38px;
+    top: 174px;
+    left: 510px;
+
+    border-radius: 4px;
+    background-color: #2196F3;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
+                0px 1px 2px rgba(0, 0, 0, 0.08), 
+                0px 2px 2px rgba(0, 0, 0, 0.12);
+
+    font-style: normal;
+    font-size: 16px;
+    font-weight: 500px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+
+.menu-item-pages{
+    position: absolute;
+    width: 93px;
+    height: 38px;
+    top: 174px;
+    left: 639px;
+
+    border-radius: 4px;
+}
+
+.menu-item-applications{
+    position: absolute;
+    width: 114px;
+    height: 38px;
+    top: 174px;
+    left: 740px;
+
+    border-radius: 4px;
+}
+
+.menu-item-design{
+    position: absolute;
+    width: 91px;
+    height: 38px;
+    top: 174px;
+    left: 862px;
+
+    border-radius: 4px;
+}
+
+.menu-item-marketing{
+    position: absolute;
+    width: 121px;
+    height: 38px;
+    top: 174px;
+    left: 961px;
+
+    border-radius: 4px;
+}
+
+/* ********************* Projects ***************************** */
+
+.projects{
+    list-style-type: none;
+}
+
+.picture-name{
+    white-space: pre-wrap;
+}
+
+.project-1{
+    position: absolute;
+    /* width: 370px;
+    height: 294px; */
+    top: 262px;
+    left: 215px;
+}
+
+.project-2{
+    position: absolute;
+    /* width: 370;
+    height: 294; */
+    top: 262px;
+    left: 615;
+}
+
+.project-3{
+    position: absolute;
+    top: 262px;
+    left: 1015px;
+}
+
+.project-4{
+    position: absolute;
+    top: 696px;
+    left: 215px;
+}
+
+.project-5{
+    position: absolute;
+    top: 696px;
+    left: 615px;
+}
+
+.project-6{
+    position: absolute;
+    top: 696px;
+    left: 1015px;
+}
+
+.project-7{
+    position: absolute;
+    top: 1130px;
+    left: 215px;
+}
+
+.project-8{
+    position: absolute;
+    top: 1130px;
+    left: 615px;
+}
+
+.project-9{
+    position: absolute;
+    top: 1130px;
+    left: 1015px;
+}
+
+/* ................. Footer ................ */
+
+.logo-bottom{
+    position: absolute;
+    width: 145px;
+    height: 31px;
+    top: 1688px;
+    left: 215px;
+}
+
+.data-contact-bottom{
+    position: absolute;
+    width: 247px;
+    height: 81px;
+    top: 1739px;
+    left: 215px;
+
+    font-size: 14px;
+    font-style: normal;
+}
+
+.data-contact-bottom > ul{
+    list-style-type: none;
+    position: absolute;
+}
+
+/* .box-footer{
+    position: absolute;
+    width: 1600px;
+    height: 252px;
+    left: 0px;
+    top: 1628px;
+    background-color: #2F303A;
 } */
