--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,7 @@
     letter-spacing: 0.02em;
 
     text-decoration: none;
+    color: var(--secondary-color);
 }
 
 .menu-navigation-item-portfolio-link:hover,
