--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,8 @@
 .menu-navigation-item-portfolio-link:hover,
 .menu-navigation-item-agency:hover,
 .menu-navigation-item-contact:hover,
-.menu-navigation-item-portfolio-link:focus{
+.menu-navigation-item-portfolio-link:focus,
+.menu-navigation-item-portfolio-link:active{
     color: var(--main-color);
     text-decoration: none;
 }
