--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+  /* *************** VARIABLES *************** */
+  
   :root{
     --main-font: font-family: 'Roboto', 'Relaway', sans-serif;
     --main-color: #2196f3;
@@ -6,15 +8,19 @@
     --text-btn-color: #ffffff;
   }
 
+/* ########################################### */
+
   body{
     font-family: var(--main-font);
     color: var(--secondary-color);
   }
 
+
 /* *************** HEADER *************** */
 
 .logo-header,
-.logo-footer{
+.logo-footer,
+.logo-footer-index{
     position: absolute;
     width: 145px;
     height: 31px;
@@ -22,6 +28,7 @@
     left: 215px;
 
     font-family: 'Raleway';
+    font-weight: 700;
     font-size: 26px;
     line-height: 1.192;
 
@@ -64,6 +71,9 @@
     letter-spacing: 0.02em;
 
     text-decoration: none;
+}
+
+.menu-navigation-item-portfolio-link{
     color: var(--secondary-color);
 }
 
@@ -110,7 +120,11 @@
 .contact-details-header-mail-link:focus,
 .contact-details-footer-mail-link:focus,
 .contact-details-header-telephone-link:focus,
-.contact-details-footer-telephone-link:focus{
+.contact-details-footer-telephone-link:focus,
+.contact-details-footer-mail-link-index:hover,
+.contact-details-footer-mail-link-index:focus,
+.contact-details-footer-telephone-link-index:hover,
+.contact-details-footer-telephone-link-index:focus{
     color: var(--main-color);
 }
 
@@ -120,10 +134,13 @@
     height: 16px;
     top: 32px;
     left: 1263px;
+
+    color: var(--third-color);
 }
 
 .contact-details-header-telephone-link,
-.contact-details-footer-telephone-link{
+.contact-details-footer-telephone-link,
+.contact-details-footer-telephone-link-index{
     text-decoration: none;
     color: var(--third-color);
 }
@@ -131,8 +148,14 @@
             /* END CONTACT DETAILS */        
 
 /* *************** END HEADER *************** */
-/* ########################################### */
+
+/* ************************************************************** */
+/* ************************* PORTFOLIO.HTML ************************* */
+/* ************************************************************** */
+
 /* *************** MAIN *************** */
+
+            /* BUTTONS */
 
 .menu {
     list-style-type: none;   
@@ -295,11 +318,14 @@
     color: var(--third-color)
 }
 
+            /* END PROJECTS */
+
 /* *************** END MAIN *************** */
 /* ########################################### */
 /* *************** FOOTER *************** */
 
-.logo-footer{
+.logo-footer,
+.logo-footer-index{
     position: absolute;
     width: 145px;
     height: 31px;
@@ -307,8 +333,13 @@
     left: 215px;
 }
 
+.logo-footer-index{
+    top: 2157px;
+}
 
-.contact-details-footer{
+
+.contact-details-footer,
+.contact-details-footer-index{
     list-style-type: none;
 
     font-style: normal;
@@ -319,7 +350,8 @@
     letter-spacing: 0.03em;
 }
 
-.contact-details-footer-address{
+.contact-details-footer-address,
+.contact-details-footer-address-index{
     position: absolute;
     width: 247px;
     height: 21px;
@@ -327,7 +359,12 @@
     left: 215px;
 }
 
-.contact-details-footer-mail-link{
+.contact-details-footer-address-index{
+    top: 2208px;
+}
+
+.contact-details-footer-mail-link,
+.contact-details-footer-mail-link-index{
     color: var(--third-color);
     text-decoration: underline;
 
@@ -338,7 +375,12 @@
     left: 215px;
 }
 
-.contact-details-footer-telephone{
+.contact-details-footer-mail-link-index{
+    top: 2238px;
+}
+
+.contact-details-footer-telephone,
+.contact-details-footer-telephone-link-index{
     position: absolute;
     width: 231px;
     height: 21px;
@@ -346,6 +388,206 @@
     left: 215px;
 }
 
+.contact-details-footer-telephone-link-index{
+    top: 2268px;
+}
+
 
 
 /* *************** END FOOTER *************** */
+
+/* ************************************************************** */
+/* ************************* INDEX.HTML ************************* */
+/* ************************************************************** */
+
+/* *************** MAIN *************** */
+
+.head-main{
+    position: absolute;
+    width: 696px;
+    height: 120px;
+    left: 452px;
+    top: 280px;
+
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.364;
+
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+}
+
+.head-main-btn{
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    left: 700px;
+    top: 430px;
+
+    background-color: var(--main-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    color: var(--text-btn-color);
+}
+
+.lorem{
+    list-style-type: none;
+}
+
+.lorem-item-first,
+.lorem-item-second,
+.lorem-item-third,
+.lorem-item-fourth{
+    position: absolute;
+    width: 270px;
+    height: 16px;
+    left: 215px;
+    top: 774px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.lorem-item-second{
+    left: 515px;
+}
+
+.lorem-item-third{
+    left: 815px;
+}
+
+.lorem-item-fourth{
+    left: 1115px;
+}
+
+.lorem-item-first-text,
+.lorem-item-second-text,
+.lorem-item-third-text,
+.lorem-item-fourth-text{
+    position: absolute;
+    width: 270px;
+    height: 75px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.714;
+
+    letter-spacing: 0.03em;
+
+    color: var(--third-color);
+}
+
+            /* SECTION NO.1 */
+
+.head-section-job,
+.head-section-team{
+    position: absolute;
+    width: 352px;
+    height: 42px;
+    left: 624px;
+    top: 969px;
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.166;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.section-job-list{
+    list-style-type: none;
+}
+
+.section-job-list-item-first,
+.section-job-list-item-second,
+.section-job-list-item-third{
+    position: absolute;
+    width: 370px;
+    height: 294px;
+    left: 215px;
+    top: 1061px;
+}
+
+.section-job-list-item-second{
+    left: 615px;
+}
+
+.section-job-list-item-third{
+    left: 1015px;
+}
+
+            /* END SECTION NO.1 */
+
+            /* SECTION NO.2 */
+
+.head-section-team{
+    position: absolute;
+    width: 210px;
+    height: 42px;
+    left: 695px;
+    top: 1543px;
+}
+
+.section-team-list{
+    list-style-type: none;
+}
+
+.section-team-list-item-first,
+.section-team-list-item-second,
+.section-team-list-item-third,
+.section-team-list-item-fourth{
+    position: absolute;
+    left: 215px;
+    top: 1635px;
+}
+
+.section-team-list-item-second{
+    left: 515px;
+}
+
+.section-team-list-item-third{
+    left: 815px;
+}
+
+.section-team-list-item-fourth{
+    left: 1115px;
+}
+
+.team-name{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.188;
+
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    white-space: pre-wrap;
+}
+
+.job-position{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.188;
+
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--third-color);
+}
+
+            /* END SECTION NO.2 */
+
+/* *************** END MAIN *************** */
