--- a/css/styles.css
+++ b/css/styles.css
@@ -415,7 +415,7 @@
 
     text-align: center;
     letter-spacing: 0.06em;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 
 .head-main-btn{
@@ -458,7 +458,7 @@
     font-size: 14px;
     line-height: 1.143;
     letter-spacing: 0.03em;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 
 .lorem-item-second{
