--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,9 @@
 
 /* *************** HEADER *************** */
 
-.logo-header,
-.logo-footer,
-.logo-footer-index{
+.logo-top,
+.logo-foter,
+.logo-foter-index{
     position: absolute;
     width: 145px;
     height: 31px;
@@ -97,11 +97,11 @@
 
             /* CONTACT DETAILS HEADER */
 
-.contact-details-header{
+.contact-details-top{
     list-style-type: none;
 }
 
-.contact-details-header-mail{
+.contact-details-top-mail{
     position: absolute;
     width: 135px;
     height: 16px;
@@ -109,27 +109,27 @@
     left: 1078px;
 }
 
-.contact-details-header-mail-link{
+.contact-details-top-mail-link{
     text-decoration: none;
     color: var(--third-color);
 }
 
-.contact-details-header-mail-link:hover,
-.contact-details-footer-mail-link:hover,
-.contact-details-header-telephone-link:hover,
-.contact-details-footer-telephone-link:hover,
-.contact-details-header-mail-link:focus,
-.contact-details-footer-mail-link:focus,
-.contact-details-header-telephone-link:focus,
-.contact-details-footer-telephone-link:focus,
-.contact-details-footer-mail-link-index:hover,
-.contact-details-footer-mail-link-index:focus,
-.contact-details-footer-telephone-link-index:hover,
-.contact-details-footer-telephone-link-index:focus{
+.contact-details-top-mail-link:hover,
+.contact-details-foter-mail-link:hover,
+.contact-details-top-telephone-link:hover,
+.contact-details-foter-telephone-link:hover,
+.contact-details-top-mail-link:focus,
+.contact-details-foter-mail-link:focus,
+.contact-details-top-telephone-link:focus,
+.contact-details-foter-telephone-link:focus,
+.contact-details-foter-mail-link-index:hover,
+.contact-details-foter-mail-link-index:focus,
+.contact-details-foter-telephone-link-index:hover,
+.contact-details-foter-telephone-link-index:focus{
     color: var(--main-color);
 }
 
-.contact-details-header-telephone{
+.contact-details-top-telephone{
     position: absolute;
     width: 110px;
     height: 16px;
@@ -139,9 +139,9 @@
     color: var(--third-color);
 }
 
-.contact-details-header-telephone-link,
-.contact-details-footer-telephone-link,
-.contact-details-footer-telephone-link-index{
+.contact-details-top-telephone-link,
+.contact-details-foter-telephone-link,
+.contact-details-foter-telephone-link-index{
     text-decoration: none;
     color: var(--third-color);
 }
@@ -325,8 +325,8 @@
 /* ########################################### */
 /* *************** FOOTER *************** */
 
-.logo-footer,
-.logo-footer-index{
+.logo-foter,
+.logo-foter-index{
     position: absolute;
     width: 145px;
     height: 31px;
@@ -334,13 +334,13 @@
     left: 215px;
 }
 
-.logo-footer-index{
+.logo-foter-index{
     top: 2157px;
 }
 
 
-.contact-details-footer,
-.contact-details-footer-index{
+.contact-details-foter,
+.contact-details-foter-index{
     list-style-type: none;
 
     font-style: normal;
@@ -351,8 +351,8 @@
     letter-spacing: 0.03em;
 }
 
-.contact-details-footer-address,
-.contact-details-footer-address-index{
+.contact-details-foter-address,
+.contact-details-foter-address-index{
     position: absolute;
     width: 247px;
     height: 21px;
@@ -360,12 +360,12 @@
     left: 215px;
 }
 
-.contact-details-footer-address-index{
+.contact-details-foter-address-index{
     top: 2208px;
 }
 
-.contact-details-footer-mail-link,
-.contact-details-footer-mail-link-index{
+.contact-details-foter-mail-link,
+.contact-details-foter-mail-link-index{
     color: var(--third-color);
     text-decoration: underline;
 
@@ -376,12 +376,12 @@
     left: 215px;
 }
 
-.contact-details-footer-mail-link-index{
+.contact-details-foter-mail-link-index{
     top: 2238px;
 }
 
-.contact-details-footer-telephone,
-.contact-details-footer-telephone-link-index{
+.contact-details-foter-telephone,
+.contact-details-foter-telephone-link-index{
     position: absolute;
     width: 231px;
     height: 21px;
@@ -389,7 +389,7 @@
     left: 215px;
 }
 
-.contact-details-footer-telephone-link-index{
+.contact-details-foter-telephone-link-index{
     top: 2268px;
 }
 
@@ -491,7 +491,7 @@
 
             /* SECTION NO.1 */
 
-.head-section-job,
+.head-our-job,
 .head-section-team{
     position: absolute;
     width: 352px;
@@ -506,13 +506,13 @@
     letter-spacing: 0.03em;
 }
 
-.section-job-list{
+.our-job-list{
     list-style-type: none;
 }
 
-.section-job-list-item-first,
-.section-job-list-item-second,
-.section-job-list-item-third{
+.our-job-list-item-first,
+.our-job-list-item-second,
+.our-job-list-item-third{
     position: absolute;
     width: 370px;
     height: 294px;
@@ -520,11 +520,11 @@
     top: 1061px;
 }
 
-.section-job-list-item-second{
+.our-job-list-item-second{
     left: 615px;
 }
 
-.section-job-list-item-third{
+.our-job-list-item-third{
     left: 1015px;
 }
 
@@ -532,7 +532,7 @@
 
             /* SECTION NO.2 */
 
-.head-section-team{
+.head-our-team{
     position: absolute;
     width: 210px;
     height: 42px;
@@ -540,28 +540,28 @@
     top: 1543px;
 }
 
-.section-team-list{
+.our-team-list{
     list-style-type: none;
 }
 
-.section-team-list-item-first,
-.section-team-list-item-second,
-.section-team-list-item-third,
-.section-team-list-item-fourth{
+.our-team-list-item-first,
+.our-team-list-item-second,
+.our-team-list-item-third,
+.our-team-list-item-fourth{
     position: absolute;
     left: 215px;
     top: 1635px;
 }
 
-.section-team-list-item-second{
+.our-team-list-item-second{
     left: 515px;
 }
 
-.section-team-list-item-third{
+.our-team-list-item-third{
     left: 815px;
 }
 
-.section-team-list-item-fourth{
+.our-team-list-item-fourth{
     left: 1115px;
 }
 
